# drop

./: Cargo.toml  README.md  build.rs  config.toml.default
doc/: convert-to-man  drop.1  drop.1.md
pkg/archlinux/: PKGBUILD
src/: aws.rs  capture.rs  cli.rs  clip.rs  conf.rs  main.rs  notify.rs  screenshot.rs  ui.rs  util.rs
