[package]
name = "drop"
version = "0.3.0"
authors = ["Bryan Gilbert <gilbertw1@gmail.com>"]
build = "build.rs"

[dependencies]
rand = "0.3.17"
config = "0.7.0"
clap = "2.27.0"
nix = "0.9.0"
c_vec = "~1.2"
sys-info = "*"
lazy_static = "0.2.8"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.2.0"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.2"
cocoa = "0.9.2"

[build-dependencies]
clap = "2.27.0"
