[package]
name = "drop"
version = "0.3.2"
authors = ["Bryan Gilbert <gilbertw1@gmail.com>"]
build = "build.rs"

[dependencies]
rand = "0.8.3"
config = "0.10.1"
clap = "2.33.3"
nix = "0.19.1"
c_vec = "2.0.0"
sys-info = "*"
lazy_static = "1.4.0"
anyhow = "1.0.38"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.5.0"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.2"
cocoa = "0.9.2"

[build-dependencies]
clap = "2.33.3"
